scss/partials/_activity_card.scss
div.activity-card {
  width: 432px;
  float: left;
  background-color: white;
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.05);
  border-radius: 4px;
  margin: 12px;
  position: relative;

  @include mobile() {
    width: 100%;
    margin: 12px 0px;
  }

  &:hover, &.dropdown-active {
    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.15);

    div.activity-card-head.entry-card {
      background-color: $carrot_light_gray_5;
    }

    div.activity-card-head div.activity-card-head-right {
      div.activity-tag {
        background-color: $carrot_light_gray_6;
      }

      div.more-button {
        button.more-ellipsis {
          opacity: 0.8;
        }
      }
    }

    div.activity-card-footer {
      button.post-edit {
        opacity: 0.8;
      }

      div.activity-share {
        button.activity-share-bt {
          opacity: 1;
        }
      }
    }
  }

  &.activity-card-placeholder {
    background-color: transparent;
    box-shadow: none;
    border: none;
  }

  &.empty-state {
    border: none;
    box-shadow: none;
    background-color: transparent;
    margin-top: 20px;
    flex: 1;
    text-align: center;
    width: 100%;

    div.empty-state-content {
      height: 160px;
      position: relative;
      top: 50%;
      margin-top: -80px;

      img {
        width: 168px;
        height: 120px;
      }

      div.activity-card-title {
        font-size: 14px;
        color: $carrot_light_gray;
        @include avenir_H();
        margin-top: 20px;
        text-align: center;

        button {
          color: $carrot_text_blue;
          padding: 0;
          margin: 0;

          &:hover, &:avtive, &:focus {
            border: none;
            outline: none;
            text-decoration: underline;
          }
        }
      }
    }
  }

  &.all-posts-card {
    div.activity-card-head {
      div.activity-card-head-author {
        width: 45%;
      }

      div.activity-card-head-right {
        width: 55%;
      }
    }

    div.activity-card-content{

      div.activity-card-body {
        max-height: #{24*6}px;

        &.has-media-preview {
          width: 100%;
          margin-right: 0px;
          float: initial;
        }
      }

      div.read-more {
        width: 100%;
        text-align: center;
        margin-top: 24px;
        color: $carrot_text_blue;
        @include avenir_H();
        font-size: 16px;
      }

      div.media-preview-container {
        width: 100%;
        text-align: center;
        float: initial;
        margin-top: 16px;
        max-height: 200px;
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
        overflow: hidden;

        img {
          max-width: 100%;
          max-height: 200px;
        }
      }
    }
  }

  div.activity-card-breadcrumb {
    @include avenir_R();
    font-size: 14px;
    color: $oc_gray_7;
    padding: 24px;
    background-color: $carrot_light_gray_2;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;

    div.topic {
      float: right;
      @include activity-tag();
    }
  }

  div.activity-card-head {
    width: 100%;
    padding: 16px 24px;
    height: 72px;

    &.entry-card {
      background-color: $carrot_light_gray_2;
      border-top-left-radius: 4px;
      border-top-right-radius: 4px;
    }

    div.activity-card-head-author {
      float: left;
      width: 55%;
      padding-right: 20px;
      overflow: hidden;

      @include activity-author(40);
    }

    div.activity-card-head-right {
      float: right;
      position: relative;
      width: 45%;
      margin-top: 8px;

      div.activity-attachments {
        float: right;
      }

      div.new-tag {
        @include avenir_B();
        color: $carrot_green_1;
        font-size: 12px;
        line-height: 14px;
        padding: 6px 7px 4px 7px;
        float: right;
        text-transform: uppercase;
        border: 1px solid $carrot_green_2;
        border-radius: 3px;
      }

      div.activity-tag {
        margin-top: 0;
        float: right;
        max-width: 100%;
        text-overflow: ellipsis;
        overflow: hidden;
        margin-right: 8px;

        &.double-tag {
          max-width: 50%;
        }
      }

      @include activity-tag();

      div.more-button {
        float: right;
        position: relative;
        margin-right: -6px;

        button.more-ellipsis {
          width: 24px;
          height: 24px;
          padding: 2px 10px;
          display: block;
          background-image: cdnUrl("/img/ML/vertical_ellipsis.svg");
          background-position: center;
          background-size: 4px 20px;
          background-repeat: no-repeat;
          opacity: 0;

          &:hover {
            opacity: 1;
          }
        }

        div.activity-move {
          position: absolute;
          top: 36px;
          left: unset;
          right: -10px;
        }

        div.activity-more-dropdown-menu {
          position: absolute;
          top: 36px;
          right: -10px;
          left: calc(100% - 100px + 10px);
          min-width: 100px;
          height: auto;
          border: none;
          outline: none;
          box-shadow: none;
          background-color: transparent;
          overflow: visible;
          z-index: 100;

          div.triangle {
            position: absolute;
            top: -7px;
            left: calc(100% - 30px);
            background-color: white;
            border-top: 1px solid rgba(177,184,192,0.50);
            border-left: 1px solid rgba(177,184,192,0.50);
            transform: rotate(45deg);
            width: 15px;
            height: 15px;
          }

          ul.activity-card-more-menu {
            background-color: white;
            border: 1px solid rgba(177,184,192,0.50);
            box-shadow: 0 4px 10px 1px rgba(0,0,0,0.10);
            border-radius: 5px;
            margin: 0px;
            padding: 10px 13px 6px 8px;
            min-height: 50px;
            list-style-type: none;
            width: 100%;

            li {
              padding: 3px 8px;
              @include avenir_M();
              font-size: 14px;
              color: $carrot_light_gray_3;
              cursor: pointer;
              background-color: transparent;

              &:hover {
                background-color: rgba($carrot_light_gray_4, 0.2);
              }
            }
          }
        }
      }
    }
  }

  div.activity-card-content {
    width: 100%;
    padding: 32px 32px 0px;

    div.activity-card-title {
      @include activity-title();
      margin-bottom: 24px;
    }

    div.activity-card-headline {
      @include activity-headline();
      text-overflow: ellipsis;
      width: 100%;
      overflow: hidden;
      white-space: nowrap;
      max-height: 28px;

      &.has-headline {
        margin-bottom: 24px;
        height: 28px;
      }
    }

    @include activity-media-preview();

    div.activity-card-body {
      @include activity-body();
      display: block;
      line-height: 24px;
      max-height: #{24*3}px;
      overflow: hidden;

      &.has-body {
        height: #{24*3}px;
      }

      &.has-media-preview {
        width: calc(100% - 72px - 16px);
        margin-right: 16px;
        float: left;
      }

      .carrot-no-preview {
        display: none;
      }

      a:not(.read-more):hover {
        text-decoration: none !important;
      }

      img:not(.emojione){
        display: none;
      }

      h2 {
        @include avenir_R();
        font-size: 16px;
        font-weight: normal;
      }

      b, strong {
        font-weight: normal;
        @include avenir_R();
      }

      // // Uncomment this to programmatically add the read full update at the end of the last body tag
      // div:last-child, p:last-child {
      //   &:after {
      //     content: "Read Full Update";
      //     @include activity-body;
      //     color: $carrot_text_blue;
      //     cursor: pointer;
      //     margin-left: 5px;
      //   }
      // }

      // &:empty {
      //   &:after {
      //     content: "Read Full Update";
      //     @include activity-body;
      //     color: $carrot_text_blue;
      //     cursor: pointer;
      //   }
      // }
    }
  }

  div.activity-card-footer {
    width: 100%;
    height: 72px;
    padding: 24px 24px 24px 32px;

    div.activity-share-thoughts {
      background-color: $carrot_green_3;
      height: 32px;
      padding: 8px 16px 8px 32px;
      border-radius: 100px;
      @include avenir_H();
      font-size: 12px;
      color: $carrot_green_1;
      background-image: cdnUrl("/img/ML/share_thoughts.svg");
      background-position: 16px 10px;
      background-size: 12px 12px;
      background-repeat: no-repeat;
      float: left;
      cursor: pointer;
    }

    div.activity-share {
      float: right;
      position: relative;
      margin-right: 8px;
      margin-top: 4px;

      button.activity-share-bt {
        width: 24px;
        height: 24px;
        background-image: cdnUrl("/img/ML/foc_share_icon.svg");
        background-repeat: no-repeat;
        background-position: center;
        background-size: 24px 24px;
        padding: 0;
        margin: 0px;
        opacity: 0;
      }

      div.activity-share-dropdown {
        position: absolute;
        bottom: 42px;
        right: -10px;
        left: calc(100% - 100px + 10px);
        min-width: 100px;
        height: auto;
        border: none;
        outline: none;
        box-shadow: none;
        background-color: transparent;
        overflow: visible;
        z-index: 100;

        div.triangle {
          position: absolute;
          bottom: -7px;
          left: calc(100% - 30px);
          background-color: white;
          border-top: 1px solid rgba(177,184,192,0.50);
          border-left: 1px solid rgba(177,184,192,0.50);
          transform: rotate(225deg);
          width: 15px;
          height: 15px;
        }

        ul.activity-share-dropdown-list {
          background-color: white;
          border: 1px solid rgba(177,184,192,0.50);
          box-shadow: 0 4px 10px 1px rgba(0,0,0,0.10);
          border-radius: 5px;
          margin: 0px;
          padding: 10px 13px 6px 8px;
          min-height: 50px;
          list-style-type: none;
          width: 100%;

          li.activity-share-dropdown-item {
            padding: 3px 8px;
            @include avenir_M();
            font-size: 14px;
            color: $carrot_light_gray_3;
            cursor: pointer;
            background-color: transparent;

            &:hover {
              background-color: rgba($carrot_light_gray_4, 0.2);
            }
          }
        }
      }
    }

    button.post-edit {
      float: right;
      margin-right: -6px;
      margin-top: 4px;
      width: 24px;
      height: 24px;
      background-image: cdnUrl("/img/ML/post_edit_pencil.svg");
      background-position: center;
      background-size: 14px 14px;
      background-repeat: no-repeat;
      opacity: 0;

      &:hover {
        opacity: 1;
      }
    }
  }
}
/* linkAnimation for card and modal links */
@include keyframe(linkAnimation){
  0% {
    background-position: right bottom;
    background-size: 100% .1rem;
  }

  50% {
    background-position: right bottom;
    background-size: 0 .1rem;
  }

  51% {
    background-position: left bottom;
    background-size: 0 .1rem;
  }

  100% {
    background-position: left bottom;
    background-size: 100% .1rem;
  }
}

